Continuação da estruturação

--- a/Igada/index.html
+++ b/Igada/index.html
@@ -17,26 +17,30 @@
 
     <main> 
         <h1> 1. Processador AMD RYZEN 7 5700X </h1> 
-        <a href="https://www.amazon.com.br/PROCESSADOR-AMD-5700X-100-100000926WOF-Cer%C3%A2mica/dp/B09VCHQHZ6/ref=asc_df_B09VCHQHZ6?tag=brbngshpdsk-20&linkCode=df0&hvadid=77447066851290&hvnetw=o&hvqmt=e&hvbmt=be&hvdev=c&hvlocint=&hvlocphy=147082&hvtargid=pla-4581046495145377&psc=1&msclkid=d74e4e88063615c54712270f42e81cdd" target="_blank"> Link de onde comprar.</a>
+        <a href="https://www.amazon.com.br/PROCESSADOR-AMD-5700X-100-100000926WOF-Cer%C3%A2mica/dp/B09VCHQHZ6/ref=asc_df_B09VCHQHZ6?tag=brbngshpdsk-20&linkCode=df0&hvadid=77447066851290&hvnetw=o&hvqmt=e&hvbmt=be&hvdev=c&hvlocint=&hvlocphy=147082&hvtargid=pla-4581046495145377&psc=1&msclkid=d74e4e88063615c54712270f42e81cdd" target="_blank"> Link para comprar o Processador na Amazon.</a>
         <br>
         <picture>
             <img src="https://m.media-amazon.com/images/I/51gRv8z+K6L._AC_SY679_.jpg" alt="Ryzen 7 5700">
         </picture>
         
         <h1> 2. Placa-mãe Asus TUF GAMING B550M-PLUS Micro ATX AM4 </h1>
-        <a href="https://www.kabum.com.br/produto/115216/placa-mae-asus-tuf-gaming-b550m-plus-amd-am4-matx-ddr4-preto-90mb14a0-c1bay0?aw_affid=691737&sv1=affiliate&sv_campaign_id=691737&awc=17729_1770474558_ac432f807c35c217a7c96427e410ff79&utm_source=AWIN&utm_medium=AFILIADOS&utm_campaign=fevereiro24&utm_content=2026-02-07&utm_term=691737" target="_blank"> Link de onmde comprar.</a>
+        <a href="https://www.kabum.com.br/produto/115216/placa-mae-asus-tuf-gaming-b550m-plus-amd-am4-matx-ddr4-preto-90mb14a0-c1bay0?aw_affid=691737&sv1=affiliate&sv_campaign_id=691737&awc=17729_1770474558_ac432f807c35c217a7c96427e410ff79&utm_source=AWIN&utm_medium=AFILIADOS&utm_campaign=fevereiro24&utm_content=2026-02-07&utm_term=691737" target="_blank"> Link para comprar a Placa-mãe no KaBum.</a>
         <br>
         <picture>
             <img src="https://static.meupc.net/peca/placa-mae-asus-tuf-gaming-b550m-plus-rlk-512p.jpg" alt="Placa-mãe Asus TUF GAMING B550M-PLUS Micro ATX AM4">
         </picture>
 
         <h1> 3. 2 Memória RAM 8g DDR4 </h1> 
-        <p> Adendo: aqui é importate que sejam duas memórias iguas, da mesma marca, vou dar duas opções de marcas ai a que tiver mais barata comprar duas ksksskk. <br>
+        <p> Adendo: aqui é importate que sejam duas memórias iguas, da mesma marca, vou dar duas opções de marcas e de lojas, ai a que estiver/onde estiver mais barata comprar duas ksksskk. <br>
         Os preços hoje em dia estão caros, então, caso consegir dar só uma já tá lindo, só me avisar que eu compro a outra ou vejo se outra pessoa me dá de presente.</p>
-        <a href="https://www.kabum.com.br/produto/921679/memoria-ram-kingston-fury-beast-8gb-3200mt-s-ddr4-cl16-dimm-preto-kf432c16bb-8wp" target="_blank"> Link de onde comprar meória RAM Kingston Fury Beast</a>
+        <a href="https://www.kabum.com.br/produto/921679/memoria-ram-kingston-fury-beast-8gb-3200mt-s-ddr4-cl16-dimm-preto-kf432c16bb-8wp" target="_blank"> Link para comprar memória RAM Kingston Fury Beast no KaBum</a>
         <br>
-        <a href="https://www.kabum.com.br/produto/474939/memoria-ram-xpg-gammix-d35-8gb-3200mhz-ddr4-cl16-preto-ax4u32008g16a-sbkd35" target="_blank"> Link de onde comprar memória RAM XPG Gammix D35 </a>
+        <a href="https://www.amazon.com.br/dp/B097K5J1SB/?coliid=I1GBRVQCGR45AF&colid=1EIRJH97JFNIP&psc=1&ref_=list_c_wl_lv_ov_lig_dp_it" target="_blank"> Link para comprar memória RAM Kingston Fury Beast na Amazon </a>
         <br>
+        <br>
+        <a href="https://www.kabum.com.br/produto/474939/memoria-ram-xpg-gammix-d35-8gb-3200mhz-ddr4-cl16-preto-ax4u32008g16a-sbkd35" target="_blank"> Link para comprar memória RAM XPG Gammix D35 no KaBum</a>
+        <br>
+        <a href="https://www.amazon.com.br/dp/B0C69V5N6W/?coliid=I2X7M3YYXMK7E3&colid=1EIRJH97JFNIP&psc=1&ref_=list_c_wl_lv_ov_lig_dp_it" target="_blank"> Link para comprar memória RAM XPG Gammix D35 na Amazon </a>
         <div class="RAM">
             <picture>
                 <img src="https://images9.kabum.com.br/produtos/fotos/921679/memoria-ram-kingston-fury-beast-8gb-3200mt-s-ddr4-cl16-dimm-preto-kf432c16bb-8wp_1758543897_gg.jpg" alt="Memoria RAM Kingston Fury Beast">
@@ -44,6 +48,16 @@
             </picture>
         </div>
 
+        <h1> 4. Kingston SSD NV3 1 TB M.2-2280 </h1>
+        <p>Eu vou colocar o link aqui, mas tá MUITO caro isso, bizarro, acho que se estiver por uns 600/650 conto ta compensando, mas fora isso não compre.</p>
+        <a href="https://www.kabum.com.br/produto/621162/ssd-kingston-nv3-1-tb-m-2-2280-pcie-4-0-x4-nvme-leitura-6000-mb-s-gravacao-4000-mb-s-azul-snv3s-1000g?aw_affid=691737&sv1=affiliate&sv_campaign_id=691737&awc=17729_1770685956_d91fcd3f18df6a905a72cc2e1899a331&utm_source=AWIN&utm_medium=AFILIADOS&utm_campaign=fevereiro24&utm_content=2026-02-09&utm_term=691737" target="_blank"> Link para comprar SSD KIngston 1 TB no KaBum</a>
+        <br>
+        <br>
+        <a href="https://www.amazon.com.br/dp/B0DBR3DZWG?tag=craftmybox-20&linkCode=ogi&th=1&psc=1&aod=1" target="_blank"> Link para comprar SSD KIngston 1 TB na Amazon</a>
+        <br>
+        <picture>
+            <img src="https://static.meupc.net/peca/ssd-kingston-nv3-nv3-1tb-5TA-512p.jpg" alt="Kingston SSD NV3 1 TB M.2-2280">
+        </picture>
 
     </main>
     
