Atualizações na estrutura

--- a/Igada/index.html
+++ b/Igada/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="https://img.icons8.com/?size=100&id=S8xAiqv9WRp0&format=png&color=000000" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>Presentes para o Igada</title>
 </head>
@@ -26,16 +27,20 @@
         <h1> 2. Placa-mãe Asus TUF GAMING B550M-PLUS Micro ATX AM4 </h1>
         <a href="https://www.kabum.com.br/produto/115216/placa-mae-asus-tuf-gaming-b550m-plus-amd-am4-matx-ddr4-preto-90mb14a0-c1bay0?aw_affid=691737&sv1=affiliate&sv_campaign_id=691737&awc=17729_1770474558_ac432f807c35c217a7c96427e410ff79&utm_source=AWIN&utm_medium=AFILIADOS&utm_campaign=fevereiro24&utm_content=2026-02-07&utm_term=691737" target="_blank"> Link para comprar a Placa-mãe no KaBum.</a>
         <br>
+        <a href="https://www.kabum.com.br/produto/172706/placa-mae-asus-tuf-gaming-b550m-plus-amd-am4-matx-ddr4-m-2-aura-para-fita-rgb-90mb14a0-c1bay0" target="_blank"> Link para comprar a Placa-mãe na Kabum (estava mais barato na última vez que olhei).</a>
+        <br>
         <picture>
             <img src="https://static.meupc.net/peca/placa-mae-asus-tuf-gaming-b550m-plus-rlk-512p.jpg" alt="Placa-mãe Asus TUF GAMING B550M-PLUS Micro ATX AM4">
         </picture>
 
         <h1> 3. 2 Memória RAM 8g DDR4 </h1> 
-        <p> Adendo: aqui é importate que sejam duas memórias iguas, da mesma marca, vou dar duas opções de marcas e de lojas, ai a que estiver/onde estiver mais barata comprar duas ksksskk. <br>
+        <p> Adendo: aqui é importate que sejam duas memórias iguas, da mesma marca, vou dar algumas opções de marcas e de lojas, ai a que estiver/onde estiver mais barata comprar duas ksksskk. <br>
         Os preços hoje em dia estão caros, então, caso consegir dar só uma já tá lindo, só me avisar que eu compro a outra ou vejo se outra pessoa me dá de presente.</p>
         <a href="https://www.kabum.com.br/produto/921679/memoria-ram-kingston-fury-beast-8gb-3200mt-s-ddr4-cl16-dimm-preto-kf432c16bb-8wp" target="_blank"> Link para comprar memória RAM Kingston Fury Beast no KaBum</a>
         <br>
         <a href="https://www.amazon.com.br/dp/B097K5J1SB/?coliid=I1GBRVQCGR45AF&colid=1EIRJH97JFNIP&psc=1&ref_=list_c_wl_lv_ov_lig_dp_it" target="_blank"> Link para comprar memória RAM Kingston Fury Beast na Amazon </a>
+        <br>
+        <a href="https://www.terabyteshop.com.br/produto/19314/memoria-kingston-fury-beast-8gb-3200mhz-ddr4-black-kf432c16bb8?p=139255&utm_source=meupcnet&utm_medium=afiliados&utm_campaign=meupcnet" target="_blank"> Link para comprar memória RAM Kingston Fury Beast na Terabyte </a>
         <br>
         <br>
         <a href="https://www.kabum.com.br/produto/474939/memoria-ram-xpg-gammix-d35-8gb-3200mhz-ddr4-cl16-preto-ax4u32008g16a-sbkd35" target="_blank"> Link para comprar memória RAM XPG Gammix D35 no KaBum</a>
@@ -58,6 +63,7 @@
         <picture>
             <img src="https://static.meupc.net/peca/ssd-kingston-nv3-nv3-1tb-5TA-512p.jpg" alt="Kingston SSD NV3 1 TB M.2-2280">
         </picture>
+        <h1></h1>
 
     </main>
     
