ACHO que acabou a estruturação

--- a/Igada/index.html
+++ b/Igada/index.html
@@ -63,11 +63,37 @@
         <picture>
             <img src="https://static.meupc.net/peca/ssd-kingston-nv3-nv3-1tb-5TA-512p.jpg" alt="Kingston SSD NV3 1 TB M.2-2280">
         </picture>
-        <h1></h1>
+        <h1> 5. Fonte XPG Core Reactor II VE</h1>
+        <a href="https://www.kabum.com.br/produto/514896/fonte-xpg-core-reactor-ii-ve-850w-80-plus-gold-modular-pfc-ativo-preto-75261436" target="_blank"> Link para comprar Fonte XPG Core Reactor II VE no KaBum</a>
+        <br>
+        <picture>
+            <img src="https://images6.kabum.com.br/produtos/fotos/514896/fonte-xpg-core-reactor-ii-ve-850w-75261436_1721238617_gg.jpg" alt="Fonte XPG Core Reactor II VE">
+        </picture>
+
+        <h1> Periféricos (coisas para depois, talvez ksksk)</h1>
+        <h1> 1. Teclado Magnético Gamer Aula Hero 68he Hall Effect 8k Rpd</h1>
+        <a href="https://produto.mercadolivre.com.br/MLB-4122426847-teclado-magnetico-gamer-aula-hero-68he-hall-effect-8k-rpd-_JM?attributes=LANGUAGE%3ASW5nbMOqcyBVUw%3D%3D%2CKEYBOARD_COLOR%3AVHJhbnBhcmFudGUgQnJhbmNv&quantity=1&picker=true&matt_tool=14213447&matt_word=&matt_source=bing&matt_campaign=MLB_ML_BING_AO_CE-ALL-ALL_X_PLA_ALLB_TXS_ALL&matt_campaign_id=382858295&matt_ad_group=CE&matt_match_type=e&matt_network=o&matt_device=c&matt_keyword=default&msclkid=66068a1f38e81d44e662e38e2f2e1a1c&utm_source=bing&utm_medium=cpc&utm_campaign=MLB_ML_BING_AO_CE-ALL-ALL_X_PLA_ALLB_TXS_ALL&utm_term=4581596253419783&utm_content=CE" target="_blank"> Link para comprar Teclado Magnético Gamer Aula Hero 68he Hall Effect </a>
+        <br>
+        <picture>
+            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_642104-MLB96766796064_112025-F-teclado-magnetico-gamer-aula-hero-68he-hall-effect-8k-rpd.webp" alt="Teclado Magnético Gamer Aula Hero 68he Hall Effect 8k Rpd">
+        </picture>
+
+        <h1> 2. Mousepad</h1>
+        <p> Aqui temos duas opções, eu acho que para o setup que estou pensando o primeiro mousepad vai ficar melhor (o oni girl), porém qualquer um vai bem, se caso um não  tiver mais estoque pode ser o outro.</p>
+        <a href="https://www.kabum.com.br/produto/938492/mousepad-gamer-fallen-oni-girl-estendido-speed-900x400mm-mp03601" target="_blank"> Link para comprar Mousepad Gamer Fallen Oni Girl no KaBum</a>
+        <br>
+        <a href="https://www.fallenstore.com.br/mousepad-gamer-fallen-lost-future" target="_blank"> Link para comprar Mousepad Gamer Fallen Lost Future na Fallen Store </a>
+        <br>
+        <picture>
+            <img src="https://images2.kabum.com.br/produtos/fotos/938492/mousepad-gamer-fallen-oni-girl-estendido-speed-900x400mm-mp03601_1761224885_gg.jpg" alt="Mousepad Gamer Fallen Oni Girl">
+            <img src="https://fallen.cdn.magazord.com.br/img/2025/09/produto/4903/mirai-lost-future-90x40-lucas.png?null" alt="Mousepad Gamer Fallen Lost Future">
+        </picture>
+        
 
     </main>
     
     <footer>
+        <p> By Igor</p>
     </footer>
 </body>
 </html>
