Adicionei a última coisa que tinha esquecido

--- a/Igada/index.html
+++ b/Igada/index.html
@@ -71,14 +71,21 @@
         </picture>
 
         <h1> Periféricos (coisas para depois, talvez ksksk)</h1>
-        <h1> 1. Teclado Magnético Gamer Aula Hero 68he Hall Effect 8k Rpd</h1>
-        <a href="https://produto.mercadolivre.com.br/MLB-4122426847-teclado-magnetico-gamer-aula-hero-68he-hall-effect-8k-rpd-_JM?attributes=LANGUAGE%3ASW5nbMOqcyBVUw%3D%3D%2CKEYBOARD_COLOR%3AVHJhbnBhcmFudGUgQnJhbmNv&quantity=1&picker=true&matt_tool=14213447&matt_word=&matt_source=bing&matt_campaign=MLB_ML_BING_AO_CE-ALL-ALL_X_PLA_ALLB_TXS_ALL&matt_campaign_id=382858295&matt_ad_group=CE&matt_match_type=e&matt_network=o&matt_device=c&matt_keyword=default&msclkid=66068a1f38e81d44e662e38e2f2e1a1c&utm_source=bing&utm_medium=cpc&utm_campaign=MLB_ML_BING_AO_CE-ALL-ALL_X_PLA_ALLB_TXS_ALL&utm_term=4581596253419783&utm_content=CE" target="_blank"> Link para comprar Teclado Magnético Gamer Aula Hero 68he Hall Effect </a>
+        <h1> 1. Mouse Mchoose k7 ultra, cor K7 Ultra-White </h1>
+        <p> Tem que ser a cor toda branca, igual a da foto que tem os botões laterais em prata branco clomado sei lá, mas tem que ser esse! ksksk</p>
+        <a href="https://pt.aliexpress.com/item/1005010058309637.html?pdp_ext_f=%7B%22sku_id%22%3A%2212000050981555905%22%7D&sourceType=1&spm=a2g0o.wish-manage-home.0.0&gatewayAdapt=glo2bra" target="_blank"> Link para comprar Mchoose k7 ultra no Aliexpress</a>
+        <br>
+        <picture>
+            <img src="https://ae-pic-a1.aliexpress-media.com/kf/S4cd35d546e79442baa38f46d07b24f5ba.jpg_220x220q75.jpg_.avif" alt="Mouse Mchoose k7 ultra, cor K7 Ultra-White">
+        </picture>
+        <h1> 2. Teclado Magnético Gamer Aula Hero 68he Hall Effect 8k Rpd</h1>
+        <a href="https://produto.mercadolivre.com.br/MLB-4122426847-teclado-magnetico-gamer-aula-hero-68he-hall-effect-8k-rpd-_JM?attributes=LANGUAGE%3ASW5nbMOqcyBVUw%3D%3D%2CKEYBOARD_COLOR%3AVHJhbnBhcmFudGUgQnJhbmNv&quantity=1&picker=true&matt_tool=14213447&matt_word=&matt_source=bing&matt_campaign=MLB_ML_BING_AO_CE-ALL-ALL_X_PLA_ALLB_TXS_ALL&matt_campaign_id=382858295&matt_ad_group=CE&matt_match_type=e&matt_network=o&matt_device=c&matt_keyword=default&msclkid=66068a1f38e81d44e662e38e2f2e1a1c&utm_source=bing&utm_medium=cpc&utm_campaign=MLB_ML_BING_AO_CE-ALL-ALL_X_PLA_ALLB_TXS_ALL&utm_term=4581596253419783&utm_content=CE" target="_blank"> Link para comprar Teclado Magnético Gamer Aula Hero 68he Hall Effect no Mercado Livre</a>
         <br>
         <picture>
             <img src="https://http2.mlstatic.com/D_NQ_NP_2X_642104-MLB96766796064_112025-F-teclado-magnetico-gamer-aula-hero-68he-hall-effect-8k-rpd.webp" alt="Teclado Magnético Gamer Aula Hero 68he Hall Effect 8k Rpd">
         </picture>
 
-        <h1> 2. Mousepad</h1>
+        <h1> 3. Mousepad</h1>
         <p> Aqui temos duas opções, eu acho que para o setup que estou pensando o primeiro mousepad vai ficar melhor (o oni girl), porém qualquer um vai bem, se caso um não  tiver mais estoque pode ser o outro.</p>
         <a href="https://www.kabum.com.br/produto/938492/mousepad-gamer-fallen-oni-girl-estendido-speed-900x400mm-mp03601" target="_blank"> Link para comprar Mousepad Gamer Fallen Oni Girl no KaBum</a>
         <br>
@@ -88,8 +95,6 @@
             <img src="https://images2.kabum.com.br/produtos/fotos/938492/mousepad-gamer-fallen-oni-girl-estendido-speed-900x400mm-mp03601_1761224885_gg.jpg" alt="Mousepad Gamer Fallen Oni Girl">
             <img src="https://fallen.cdn.magazord.com.br/img/2025/09/produto/4903/mirai-lost-future-90x40-lucas.png?null" alt="Mousepad Gamer Fallen Lost Future">
         </picture>
-        
-
     </main>
     
     <footer>
